added groups, gitignore photo, 404 and 500

--- a/.gitignore
+++ b/.gitignore
@@ -104,3 +104,9 @@ ENV/
 
 .idea
 .DS_Store
+
+# static imgs
+playPadel/static/img/media
+!playPadel/static/img/media/default_impianto_photo.jpg
+playPadel/static/img/profile_pics
+!playPadel/static/img/profile_pics/default_profile_pic.png
